Spin parsers code refactorings
 - Tokens are grouped as a logical source lines.
 - Code statement tokens ends at the first NL token (could be interleaved with comment tokens)
 - All following tokens are comments